--- a/.github/workflows/cache-warming.yml
+++ b/.github/workflows/cache-warming.yml
@@ -118,12 +118,16 @@ jobs:
 
       - name: Run hooks when cache miss
         if: steps.cache.outputs.cache-hit != 'true'
+        shell: bash
         working-directory: ./specs
         env:
           DISTRO: ${{ inputs.distro }}
           BRANCH: ${{ inputs.branch }}
           HOOKS_DIR: ${{ inputs.hooks-dir }}
         run: |
+          mkdir -vp /var/cache/zypp/packages
+          mkdir -vp /var/cache/dnf
+
           SCRIPTS_TO_RUN=()
 
           HOOK_TYPE=cache
