--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -101,6 +101,8 @@ jobs:
           HOOK_DIR: ${{ inputs.hooks-dir }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          source venv/bin/activate
+
           if [[ -z "${ROOT_DIR:-}" || -z "${HOOK_DIR:-}" ]]; then
               echo "❌ Error: env ROOT_DIR and HOOK_DIR is required" >&2
               exit 1
